# pcg-c

./: .travis.yml  CMakeLists.txt  LICENSE.spdx  Makefile  README.md  appveyor.yml  meson.build
cmake/: RunTest.cmake  toolchain.cmake
extras/: entropy.c  entropy.h  meson.build  pcg_spinlock.h
include/: meson.build  pcg_variants.h
sample/: .gitignore  CMakeLists.txt  Makefile  meson.build  pcg32-demo.c  pcg32-global-demo.c  pcg32x2-demo.c  pcg64-demo  pcg64-demo.c
src/: CMakeLists.txt  Makefile  meson.build  pcg-advance-128.c  pcg-advance-16.c  pcg-advance-32.c  pcg-advance-64.c  pcg-advance-8.c  pcg-global-32.c  pcg-global-64.c  pcg-output-128.c  pcg-output-16.c  pcg-output-32.c  pcg-output-64.c  pcg-output-8.c  pcg-rngs-128.c  pcg-rngs-16.c  pcg-rngs-32.c  pcg-rngs-64.c  pcg-rngs-8.c
test-high/: .gitignore  CMakeLists.txt  Makefile  check-base.c  check-pcg128i.c  check-pcg128si.c  check-pcg16i.c  check-pcg16si.c  check-pcg32-global.c  check-pcg32.c  check-pcg32f.c  check-pcg32i.c  check-pcg32s.c  check-pcg32si.c  check-pcg32u.c  check-pcg64-global.c  check-pcg64.c  check-pcg64f.c  check-pcg64i.c  check-pcg64s.c  check-pcg64si.c  check-pcg64u.c  check-pcg8i.c  check-pcg8si.c  meson.build  run-tests.sh
test-high/expected/: check-pcg128i.out  check-pcg128si.out  check-pcg16i.out  check-pcg16si.out  check-pcg32-global.out  check-pcg32.out  check-pcg32f.out  check-pcg32i.out  check-pcg32s.out  check-pcg32si.out  check-pcg64-global.out  check-pcg64.out  check-pcg64f.out  check-pcg64i.out  check-pcg64s.out  check-pcg64si.out  check-pcg8i.out  check-pcg8si.out
test-low/: .gitignore  CMakeLists.txt  Makefile  check-base.c  check-mcg-128-rxs-m-64.c  check-mcg-128-xsh-rr-64.c  check-mcg-128-xsh-rs-64.c  check-mcg-128-xsl-rr-64.c  check-mcg-16-rxs-m-8.c  check-mcg-16-xsh-rr-8.c  check-mcg-16-xsh-rs-8.c  check-mcg-32-rxs-m-16.c  check-mcg-32-xsh-rr-16.c  check-mcg-32-xsh-rs-16.c  check-mcg-64-rxs-m-32.c  check-mcg-64-xsh-rr-32.c  check-mcg-64-xsh-rs-32.c  check-mcg-64-xsl-rr-32.c  check-oneseq-128-rxs-m-64.c  check-oneseq-128-rxs-m-xs-128.c  check-oneseq-128-xsh-rr-64.c  check-oneseq-128-xsh-rs-64.c  check-oneseq-128-xsl-rr-64.c  check-oneseq-128-xsl-rr-rr-128.c  check-oneseq-16-rxs-m-8.c  check-oneseq-16-rxs-m-xs-16.c  check-oneseq-16-xsh-rr-8.c  check-oneseq-16-xsh-rs-8.c  check-oneseq-32-rxs-m-16.c  check-oneseq-32-rxs-m-xs-32.c  check-oneseq-32-xsh-rr-16.c  check-oneseq-32-xsh-rs-16.c  check-oneseq-64-rxs-m-32.c  check-oneseq-64-rxs-m-xs-64.c  check-oneseq-64-xsh-rr-32.c  check-oneseq-64-xsh-rs-32.c  check-oneseq-64-xsl-rr-32.c  check-oneseq-64-xsl-rr-rr-64.c  check-oneseq-8-rxs-m-xs-8.c  check-setseq-128-rxs-m-64.c  (+42 more)
test-low/expected/: check-mcg-128-rxs-m-64.out  check-mcg-128-xsh-rr-64.out  check-mcg-128-xsh-rs-64.out  check-mcg-128-xsl-rr-64.out  check-mcg-16-rxs-m-8.out  check-mcg-16-xsh-rr-8.out  check-mcg-16-xsh-rs-8.out  check-mcg-32-rxs-m-16.out  check-mcg-32-xsh-rr-16.out  check-mcg-32-xsh-rs-16.out  check-mcg-64-rxs-m-32.out  check-mcg-64-xsh-rr-32.out  check-mcg-64-xsh-rs-32.out  check-mcg-64-xsl-rr-32.out  check-oneseq-128-rxs-m-64.out  check-oneseq-128-rxs-m-xs-128.out  check-oneseq-128-xsh-rr-64.out  check-oneseq-128-xsh-rs-64.out  check-oneseq-128-xsl-rr-64.out  check-oneseq-128-xsl-rr-rr-128.out  check-oneseq-16-rxs-m-8.out  check-oneseq-16-rxs-m-xs-16.out  check-oneseq-16-xsh-rr-8.out  check-oneseq-16-xsh-rs-8.out  check-oneseq-32-rxs-m-16.out  check-oneseq-32-rxs-m-xs-32.out  check-oneseq-32-xsh-rr-16.out  check-oneseq-32-xsh-rs-16.out  check-oneseq-64-rxs-m-32.out  check-oneseq-64-rxs-m-xs-64.out  check-oneseq-64-xsh-rr-32.out  check-oneseq-64-xsh-rs-32.out  check-oneseq-64-xsl-rr-32.out  check-oneseq-64-xsl-rr-rr-64.out  check-oneseq-8-rxs-m-xs-8.out  check-setseq-128-rxs-m-64.out  check-setseq-128-rxs-m-xs-128.out  check-setseq-128-xsh-rr-64.out  check-setseq-128-xsh-rs-64.out  check-setseq-128-xsl-rr-64.out  (+16 more)
