test_high_check_pcg128i_file		=	files('check-pcg128i.c')
test_high_check_pcg128si_file		=	files('check-pcg128si.c')
test_high_check_pcg16i_file			=	files('check-pcg16i.c')
test_high_check_pcg16si_file		=	files('check-pcg16si.c')
test_high_check_pcg32_file			=	files('check-pcg32.c')
test_high_check_pcg32f_file			=	files('check-pcg32f.c')
test_high_check_pcg32i_file			=	files('check-pcg32i.c')
test_high_check_pcg32s_file			=	files('check-pcg32s.c')
test_high_check_pcg32si_file		=	files('check-pcg32si.c')
test_high_check_pcg32u_file			=	files('check-pcg32u.c')
test_high_check_pcg64_file			=	files('check-pcg64.c')
test_high_check_pcg64f_file			=	files('check-pcg64f.c')
test_high_check_pcg64i_file			=	files('check-pcg64i.c')
test_high_check_pcg64s_file			=	files('check-pcg64s.c')
test_high_check_pcg64si_file		=	files('check-pcg64si.c')
test_high_check_pcg64u_file			=	files('check-pcg64u.c')
test_high_check_pcg8i_file			=	files('check-pcg8i.c')
test_high_check_pcg8si_file			=	files('check-pcg8si.c')
test_high_check_pcg32_global_file	=	files('check-pcg32-global.c')
test_high_check_pcg64_global_file	=	files('check-pcg64-global.c')

test_high_check_pcg128i_exe			=	executable('check-pcg128i', [test_high_check_pcg128i_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg128si_exe		=	executable('check-pcg128si', [test_high_check_pcg128si_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg16i_exe			=	executable('check-pcg16i', [test_high_check_pcg16i_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg16si_exe			=	executable('check-pcg16si', [test_high_check_pcg16si_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg32_exe			=	executable('check-pcg32', [test_high_check_pcg32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg32f_exe			=	executable('check-pcg32f', [test_high_check_pcg32f_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg32i_exe			=	executable('check-pcg32i', [test_high_check_pcg32i_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg32s_exe			=	executable('check-pcg32s', [test_high_check_pcg32s_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg32si_exe			=	executable('check-pcg32si', [test_high_check_pcg32si_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg32u_exe			=	executable('check-pcg32u', [test_high_check_pcg32u_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg64_exe			=	executable('check-pcg64', [test_high_check_pcg64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg64f_exe			=	executable('check-pcg64f', [test_high_check_pcg64f_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg64i_exe			=	executable('check-pcg64i', [test_high_check_pcg64i_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg64s_exe			=	executable('check-pcg64s', [test_high_check_pcg64s_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg64si_exe			=	executable('check-pcg64si', [test_high_check_pcg64si_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg64u_exe			=	executable('check-pcg64u', [test_high_check_pcg64u_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg8i_exe			=	executable('check-pcg8i', [test_high_check_pcg8i_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg8si_exe			=	executable('check-pcg8si', [test_high_check_pcg8si_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])

test_high_check_pcg32_global_exe	=	executable('check-pcg32-global', [test_high_check_pcg32_global_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
test_high_check_pcg64_global_exe	=	executable('check-pcg64-global', [test_high_check_pcg64_global_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
#												  , c_args : '-Wno-format'
												  , link_with : [src_pcg_random_alib])
